[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Farzad FARID <farzy@farzy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"
doctest = true

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking"] }
# TODO Remove once 0.3.13 is fixed or "hyper" updated
socket2 = "=0.3.12"
